# jtext

./: .gitignore  LICENSE  README.md  pyproject.toml
src/jtext/: __init__.py  tools.py
